# Aster

./: .gitignore  CMakeLists.txt  Graph1.csv  Graph2.csv  README.md  RUN_ME.sh  aster.hpp  callgrind.out.387441  convert.py  crawl.py  crawl.sh  dependencies.dot  lista.txt  report.txt  reported.txt  run.sh
.github/workflows/: cmake-multi-platform.yml  flawfinder.yml
cmake/: AsterConfig.cmake.in  aster.conf.in  aster.pc.in
examples/: 3body.cpp  5body.cpp  demo.cpp  galassia  graph_maker.py  solar_system.cpp
examples/solar_system/: plotter.py
include/: Aster.hpp
include/Aster/: builder_endpoint.hpp  physics_endpoint.hpp  renderer_endpoint.hpp
include/Aster/building-api/: 3d_builder.h  GPU_endpoint.h  builder.h  clusters.h  logging.h  presets.h  sim_meta.h  units.h
include/Aster/graphics/: 2d_graphics.h  3d_graphics.h  animations.h  clienting.h  color_scale.h  inferno_scale.h  text_rendering.h
include/Aster/graphs/: graph_collection.h  labeling.h
include/Aster/impl/: BHT_impl.tpp  SABA.tpp  barnes_hut.tpp  barnes_hut_GPU.tpp  builder_endpoint.tpp  clusters_endpoint.tpp  composite_body.tpp  config.h  full_GPU.tpp  graph_collection.tpp  kernel_uploaders.tpp  labeling.tpp  tc_impl_cl.tpp  tool_chain_impl.tpp
include/Aster/impl/kernels/: PNs.cl.h  PNs3d.cl.h  barnes_tree_creation.cl.h  basic_barnes_force.cl.h  bitonic_sort.cl.h  eulerian_update.cl.h  generalized_intgrt.cl.h  generalized_intgrt3d.cl.h  morton_writer.cl.h  newton_update.cl.h  newton_update3d.cl.h  radix.cl.h  sorting.cl.h
include/Aster/kernels/: BHH_specific.cl.h  PNs.cl.h  PNs3d.cl.h  WH_planetary.cl.h  basic_barnes_force.cl.h  eulerian_update.cl.h  leapfrog.cl.h  morton_writer.cl.h  newton_update.cl.h  newton_update3d.cl.h
include/Aster/physics/: body.h  coeffs.h  composite_body.h  tool-chain.h  vectors.h
include/Aster/simulations/: 3d_sim_obj.h  BHT_sim.h  barnes-hut.h  barnes-hut3d.h  barnes_hut_GPU.h  basic.h  composite.h  full_GPU.h  pooling.h  pooling_helper.h  sim_helper.h  sim_obj.h  simulation.h
src/: barnes_hut2d.cpp  barnes_hut3d.cpp  builder_endpoint.cpp  demo  demo.cpp  main  main.cpp  physics_endpoint.cpp  renderer2d_endpoint.cpp  renderer3d_endpoint.cpp
src/cli-api/: gui  main.cpp
src/clusters/: builder_endpoint.cpp  clusters_endpoint.cpp  composite2d.cpp  presets_impl.cpp
src/graphics/: animations.cpp  color_scale.cpp  graph_collection.cpp  inferno_cm.cpp  labeling.cpp  renderer2d_endpoint.cpp  renderer3d_endpoint.cpp
src/graphics-api/: canvas.h
src/integrators/: SABA.cpp
src/labeling/: animations.cpp  text_rendering.cpp
src/physics/: body.h  physics.h  physics_endpoint.cpp  tool_chain_impl.cpp  vectors.h  vectors_helper.h
src/setting/: setting.h
src/sim-setup/: presets.h  sim_helper.h  simulation.h
src/simulating/: bh_specialization.cpp  builder.cpp  collectors.cpp  logging.cpp  physics_endpoint.cpp  sorting.cpp
src/solvers/: BHT_impl.cpp  SimpleGPU.cpp  barnes_hut.cpp  barnes_hut_GPU.cpp  bh_specialization.cpp  full_GPU.cpp
src/utils/: builder_endpoint.cpp  collectors.cpp  graph_collection.cpp  kernel_uploaders.cpp  logging.cpp  tc_impl_cl.cpp  updater.cpp
tests/: ADE.csv  demo.cpp  dist_tern.csv  galassia.csv  main_tests.cpp  math_sanity_test.cpp  math_sanity_test.h  sim_building.h  sim_step_testing.h  ternary.csv
